[Cronet] Use gn desc deps to find third_party licenses.

BUG=606859

Review-Url: https://codereview.chromium.org/1934083002
Cr-Commit-Position: refs/heads/master@{#395716}

Former-commit-id: c3208e7d54e2d6369ab68cb8580ea97ab5ff5ce5